@@ -6,6 +6,7 @@
  - added german lang files (goffy)
  - added big cards (goffy)
  - updated templates (goffy)
+ - updated search (goffy)
  
 ==============================================================
 1.0 [2024/06/29 13:11:46]
